Implement game loop

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dwarfes and Dissonance</title>
+    <script type="module" src="src/game.js"></script>
 </head>
 <body>
     <canvas width="640" height="480" id="game"></canvas>
