--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dwarfes and Dissonance</title>
     <script type="module" src="src/game.js"></script>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            height: 100%;
+        }
+        canvas {
+            image-rendering: pixelated;
+            max-width: 100%;
+            min-height: 100%;
+            margin: auto;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
     <canvas width="640" height="480" id="game"></canvas>
