First finished music generator

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 </head>
 <body>
     <canvas width="640" height="480" id="game"></canvas>
+    <button id="start">Start</button>
 </body>
 </html>
