--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dwarves and Dissonance</title>
+    <title>Dwarfes and Dissonance</title>
     <script type="module" src="src/game.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
-    <script type="module" src="src/titlescreen.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script> 
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            height: 100%;
+        }
+        canvas {
+            image-rendering: pixelated;
+            margin: auto;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
-<div id="titlescreen">
-    <img id="titlebg" src="res/titlescreen/titlebgv1.png" alt="title">
-    <button id="start">
-        <img id="startbutton" src="res/titlescreen/startbutton.png"  alt="start">
-    </button>
-</div>
-<canvas id="game" width="1280" height="720"></canvas>
-
+    <canvas width="1280" height="640" id="game"></canvas>
+    <button id="start">Start</button>
 </body>
 </html>
