fixed alignment issue of start button

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
 <div id="titlescreen">
-    <img id="titlebg" src="res/titlescreen/titlebgv1.png" alt="title">
-    <button id="start">
-        <img id="startbutton" src="res/titlescreen/startbutton.png"  alt="start">
-    </button>
+    <div id="startcont">
+        <button id="start">
+            <img id="startbutton" src="res/titlescreen/startbutton.png"  alt="start">
+        </button>
+    </div>
 </div>
 <canvas id="game" width="1280" height="720"></canvas>
 
